Ensure the button is always visible

--- a/styles/global.css
+++ b/styles/global.css
@@ -158,12 +158,14 @@ a {
   position: relative;
 }
 
+.code-block pre {
+  min-height: calc(8px + 32px + 8px);
+}
+
 .copy-code-button {
   position: absolute;
-  top: 0;
-  right: 12px;
-  bottom: 0;
-  margin: auto 0;
+  top: 8px;
+  right: 8px;
   z-index: 10;
   display: flex;
   align-items: center;
@@ -175,15 +177,9 @@ a {
   background-color: rgba(255, 255, 255, 0.05);
   color: #888;
   cursor: pointer;
-  opacity: 0;
   transition:
-    opacity 200ms,
     color 200ms,
     background-color 200ms;
-}
-
-.code-block:hover .copy-code-button {
-  opacity: 1;
 }
 
 .copy-code-button:hover {
